Исправление ошибок при обработке изображений